Fixed overflow on ListItems

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   list-style: none;
-  width: 60rem;
+  width: 65rem;
   margin: 0rem auto;
   padding: 0.5rem;
   gap: 0.5rem;
@@ -13,14 +13,13 @@
   color: #363537;
   display: flex;
   flex-direction: row;
-  overflow: hidden;
   border: 0.1rem solid rgba(0, 0, 0, 0.233);
   gap: 0.25em;
   padding: 0.5rem 0.5rem 0 0.5rem;
-  height: 480px;
+  height: 600px;
 }
 
-@media only screen and (max-width: 62rem) {
+@media only screen and (max-width: 65rem) {
   
   .ListContainer {
     width: 90%;
@@ -40,23 +39,25 @@
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
-}
-
-.ListItemHeader h2 {
-  font-size: 1.75rem;
-  margin: 0px; 
-  overflow: hidden;
-  overflow-wrap: break-word;
+  overflow: auto;
 }
 
 .ListItemHeader iframe {
   flex-grow: 2;
 }
 
+.ListItemHeader h2 {
+  font-size: 1.75rem;
+  margin: 0px; 
+  overflow: auto;
+  overflow-wrap: break-word;
+}
+
 .ListItemChatContainer {
   flex: 0 0 40%;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
   background-color: lightslategrey;
   gap: 0.25rem;
 }
